--- a/index.html
+++ b/index.html
@@ -2,98 +2,95 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Jeremy J. Lee's Basic-Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 
 <body>
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
             <div class="navbar-header">
-                <p class="navbar-text">Jeremy J. Lee</p>
+                <h1>Jeremy J. Lee</h1>
             </div>
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="portfolio.html">Portfolio</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
+            <div id="navbar" class="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <div class="container row">
-        <div id="content2" class="clearfix">
-            <div class="col-sm-8">
-                <section id="main-bio">
-                    <h2>About Me</h2>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="section col-xs-6 col-xs-offset-1">
+                <h2>About Me</h2>
 
-                    <img class="img-responsive" id="bio-image" src="assets/images/Jeremy_Lee.jpg" alt="Jeremy J. Lee" style="width:200px;height:200px;border:0;">
+                <img class="img-responsive" id="bio-image" src="assets/images/Jeremy_Lee.jpg" alt="Jeremy J. Lee" style="width:200px;height:200px;border:0;">
 
-                    <p>Greetings! My name is Jeremy Joseph Lee. I'm passionate about education, music, coding, and facilitating
-                        fun and knowledge--preferably at the same time. I have a BA in anthropology and East Asian studies
-                        from the University at Albany, SUNY, and an MA in applied linguistics from the University of Montana.
-                        I currently teach English as a Second Language (ESL) to adult learners at the University of Arizona
-                        here in Tucson. I've also done teacher training here and in Guangzhou, China, and in Hermosillo,
-                        Mexico.</p>
-                    <br>
-                    <p>While facilitating learning is an essential component of my educational methodology, I also love extending
-                        that belief to my hobby of serving as a radio DJ. The Waiting Room is a two-hour weekly show on
-                        <strong>99.1FM//
-                            <a href="https://www.downtownradio.org/" target="_blank">Downtown Radio</a>
-                        </strong> hosted by me as my alter ego: DoctorSlow. In this role I curate a live musical "mixtape" of sorts
-                        comprised of new, old, local, and international "left-of-the-dial" rock'n'roll. My show airs every
-                        Thursday from 7-9am and can be heard over the airwaves in Tucson or streamed worldwide from the website
-                        or our mobile app: Downtown Radio Tucson.</p>
-                    <br>
-                    <p>As a fullstack web developer, I hope to bridge these worlds and bring my patience and knowledge as an
-                        educator to web projects and bridge the gap between front-end users or clients and the all to often
-                        esoteric nature of web design and development. Ideally, I will be able to work with musicians, record
-                        labels, or even radio stations and truly see my passions connected and blossom.</p>
-                </section>
+                <p>Greetings! My name is Jeremy Joseph Lee. I'm passionate about education, music, coding, and facilitating
+                    fun and knowledge--preferably at the same time. I have a BA in anthropology and East Asian studies from
+                    the University at Albany, SUNY, and an MA in applied linguistics from the University of Montana. I currently
+                    teach English as a Second Language (ESL) to adult learners at the University of Arizona here in Tucson.
+                    I've also done teacher training here and in Guangzhou, China, and in Hermosillo, Mexico.
+                </p>
+                <br>
+                <p>While facilitating learning is an essential component of my educational methodology, I also love extending
+                    that belief to my hobby of serving as a radio DJ. The Waiting Room is a two-hour weekly show on
+                    <strong>99.1FM//
+                        <a href="https://www.downtownradio.org/" target="_blank">Downtown Radio</a>
+                    </strong> hosted by me as my alter ego: DoctorSlow. In this role I curate a live musical "mixtape" of sorts comprised
+                    of new, old, local, and international "left-of-the-dial" rock'n'roll. My show airs every Thursday from
+                    7-9am and can be heard over the airwaves in Tucson or streamed worldwide from the website or our mobile
+                    app: Downtown Radio Tucson.</p>
+                <br>
+                <p>As a fullstack web developer, I hope to bridge these worlds and bring my patience and knowledge as an educator
+                    to web projects and bridge the gap between front-end users or clients and the all to often esoteric nature
+                    of web design and development. Ideally, I will be able to work with musicians, record labels, or even
+                    radio stations and truly see my passions connected and blossom.</p>
             </div>
 
-            <div class="col-sm-4">
-                <aside>
-                    <h3>Connect with Me</h3>
-                    <ul>
-                        <li class="connect">
-                            <a href="https://github.com/DoctorSlow" target="_blank">
-                                <img id="Github" class="icon img-responsive" src="assets/images/if_github_square_black_107109.png" alt="GitHub">
-                            </a>
-                        </li>
+            <div class="section col-xs-3 col-xs-offset-1">
+                <h3>Connect with Me</h3>
+                <div class="flex-container">
+                    <div class="connect">
+                        <a href="https://github.com/DoctorSlow" target="_blank">
+                            <img id="Github" class="icon img-responsive" src="assets/images/if_github_square_black_107109.png" alt="GitHub">
+                        </a>
+                    </div>
 
-                        <li class="connect">
-                            <a href="https://www.linkedin.com/in/jeremyjosephlee/" target="_blank">
-                                <img id="LinkedIn" class="icon img-responsive" src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn">
-                            </a>
-                        </li>
+                    <div class="connect">
+                        <a href="https://www.linkedin.com/in/jeremyjosephlee/" target="_blank">
+                            <img id="LinkedIn" class="icon img-responsive" src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn">
+                        </a>
+                    </div>
 
-                        <li class="connect">
-                            <a a href="https://stackoverflow.com/users/9147050/doctorslow" target="_blank">
-                                <img id="StackOverflow" class="icon img-responsive" src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow">
-                            </a>
-                        </li>
-                    </ul>
-                </aside>
+                    <div class="connect">
+                        <a a href="https://stackoverflow.com/users/9147050/doctorslow" target="_blank">
+                            <img id="StackOverflow" class="icon img-responsive" src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <nav class="navbar navbar-fixed-bottom">
-        <div class="container-fluid">
-            <div class="navbar-footer">
-                <p class="navbar-text">Copyright ©2018 Jeremy J. Lee</p>
-            </div>
+    <div class="footer navbar-fixed-bottom">
+        <div class="container-fluid flex-container">
+            <p class="copyright">Copyright ©2018 Jeremy J. Lee</p>
         </div>
-    </nav>
+    </div>
 
 </body>
 
