--- a/contact.html
+++ b/contact.html
@@ -2,91 +2,91 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Jeremy J. Lee's Basic-Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Jeremy J. Lee</a>
+                <h1>Jeremy J. Lee</h1>
             </div>
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="index.html">About</a>
-                </li>
-                <li>
-                    <a href="portfolio.html">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
+            <div id="navbar" class="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="index.html">About</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <div class="container row">
-        <div class="col-sm-8">
-            <div id="content2" class="clearfix">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="section col-xs-6 col-xs-offset-1">
+                <h2>Contact</h2>
 
-                <section id="contact">
-                    <h2>Contact</h2>
+                <form action="action_page.php">
 
-                    <form action="action_page.php">
+                    <label for="name">Name</label>
+                    <br>
+                    <input type="text" id="input" name="name" placeholder="John Smith">
+                    <br>
+                    <br>
+                    <label for="email">Email</label>
+                    <br>
+                    <input type="text" id="input" name="email" placeholder="example@gmail.com">
+                    <br>
+                    <br>
+                    <label for="message">Message</label>
+                    <br>
+                    <textarea id="message" name="message" placeholder="Write something..."></textarea>
+                    <br>
+                    <br>
+                    <input type="submit" id="submit" value="Submit">
 
-                        <label for="name">Name</label>
-                        <br>
-                        <input type="text" id="input" name="name" placeholder="John Smith">
-                        <br>
-                        <br>
-                        <label for="email">Email</label>
-                        <br>
-                        <input type="text" id="input" name="email" placeholder="example@gmail.com">
-                        <br>
-                        <br>
-                        <label for="message">Message</label>
-                        <br>
-                        <textarea id="message" name="message" placeholder="Write something..."></textarea>
-                        <br>
-                        <br>
-                        <input type="submit" id="submit" value="Submit">
-
-                    </form>
-                </section>
+                </form>
             </div>
 
-            <div class="col-sm-4">
-                <aside>
-                    <h3>Connect with Me</h3>
-                    <ul>
-                        <li class="connect">
-                            <a href="https://github.com/DoctorSlow" target="_blank">
-                                <img id="Github" class="icon img-responsive" src="assets/images/if_github_square_black_107109.png" alt="GitHub">
-                            </a>
-                        </li>
+            <div class="section col-xs-3 col-xs-offset-1">
+                <h3>Connect with Me</h3>
+                <div class="flex-container">
+                    <div class="connect">
+                        <a href="https://github.com/DoctorSlow" target="_blank">
+                            <img id="Github" class="icon img-responsive" src="assets/images/if_github_square_black_107109.png" alt="GitHub">
+                        </a>
+                    </div>
 
-                        <li class="connect">
-                            <a href="https://www.linkedin.com/in/jeremyjosephlee/" target="_blank">
-                                <img id="LinkedIn" class="icon img-responsive" src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn">
-                            </a>
-                        </li>
+                    <div class="connect">
+                        <a href="https://www.linkedin.com/in/jeremyjosephlee/" target="_blank">
+                            <img id="LinkedIn" class="icon img-responsive" src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn">
+                        </a>
+                    </div>
 
-                        <li class="connect">
-                            <a a href="https://stackoverflow.com/users/9147050/doctorslow" target="_blank">
-                                <img id="StackOverflow" class="icon img-responsive" src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow">
-                            </a>
-                        </li>
-                    </ul>
-                </aside>
+                    <div class="connect">
+                        <a a href="https://stackoverflow.com/users/9147050/doctorslow" target="_blank">
+                            <img id="StackOverflow" class="icon img-responsive" src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="footer">
-        <footer>Copyright ©2018 Jeremy J. Lee</footer>
+    <div class="footer navbar-fixed-bottom">
+        <div class="container-fluid flex-container">
+            <p class="copyright">Copyright ©2018 Jeremy J. Lee</p>
+        </div>
     </div>
 
 </body>
