--- a/portfolio.html
+++ b/portfolio.html
@@ -2,112 +2,105 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>Jeremy J. Lee's Basic-Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Jeremy J. Lee</a>
+                <h1>Jeremy J. Lee</h1>
             </div>
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="index.html">About</a>
-                </li>
-                <li>
-                    <a href="#">Portfolio</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-            </ul>
+            <div id="navbar" class="navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="index.html">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <div class="container">
-        <div id="content2" class="clearfix">
-
-            <section id="portfolio">
+    <div class="container-fluid">
+        <div class="row">
+            <div id="content2" class="section col-xs-6 col-xs-offset-1">
                 <h2>Portfolio</h2>
+                <div class="flex-container">
 
-                <section class="containerport">
-
-                    <div class="row col-sm-8">
-
-                        <div class="relative">
-                            <img class="portfolio-image img-responsive" src="assets/images/airplane_movie.jpg" alt="Airplane!">
-                            <div class="absolute">Film</div>
-                        </div>
-
-                        <div class="relative">
-                            <img class="portfolio-image img-responsive" src="assets/images/salmon_sashimi.jpg" alt="Salmon Sashimi">
-                            <div class="absolute">Food</div>
-                        </div>
+                    <div class="portfolio-pics">
+                        <img class="portfolio-image img-responsive" src="assets/images/airplane_movie.jpg" alt="Airplane!">
+                        <h4>Film</h4>
                     </div>
 
-                    <div class="row col-sm-8">
-                        <div class="relative">
-                            <img class="portfolio-image img-responsive" src="assets/images/fugazi.jpg" alt="Fugazi">
-                            <div class="absolute">Music</div>
-                        </div>
-
-                        <div class="relative">
-                            <img class="portfolio-image img-responsive" src="assets/images/boudoir.jpg" alt="Boudoir">
-                            <div class="absolute">Boudoir</div>
-                        </div>
+                    <div class="portfolio-pics">
+                        <img class="portfolio-image img-responsive" src="assets/images/salmon_sashimi.jpg" alt="Salmon Sashimi">
+                        <h4>Food</h4>
                     </div>
 
-                    <div class="row col-sm-8">
-                        <div class="relative">
-                            <img class="portfolio-image img-responsive" src="assets/images/Quit_Your_Job.jpg" alt="Quit Your Job">
-                            <div class="absolute">Comics</div>
-                        </div>
-
-                        <div class="relative">
-                            <img class="portfolio-image img-responsive" src="assets/images/Andy-Goldsworthy.jpg" alt="Andy Goldsworthy">
-                            <div class="absolute">Art</div>
-                        </div>
+                    <div class="portfolio-pics">
+                        <img class="portfolio-image img-responsive" src="assets/images/fugazi.jpg" alt="Fugazi">
+                        <h4>Music</h4>
                     </div>
 
-                </section>
+                    <div class="portfolio-pics">
+                        <img class="portfolio-image img-responsive" src="assets/images/boudoir.jpg" alt="Boudoir">
+                        <h4>Boudoir</h4>
+                    </div>
 
-            </section>
+                    <div class="portfolio-pics">
+                        <img class="portfolio-image img-responsive" src="assets/images/Quit_Your_Job.jpg" alt="Quit Your Job">
+                        <h4>Comics</h4>
+                    </div>
+
+                    <div class="portfolio-pics">
+                        <img class="portfolio-image img-responsive" src="assets/images/Andy-Goldsworthy.jpg" alt="Andy Goldsworthy">
+                        <h4>Art</h4>
+                    </div>
+
+                </div>
+            </div>
         </div>
 
-        <div class="row col-sm-4">
-            <aside>
-                <h3>Connect with Me</h3>
-                <ul>
-                    <li class="connect">
-                        <a href="https://github.com/DoctorSlow" target="_blank">
-                            <img id="Github" class="icon img-responsive" src="assets/images/if_github_square_black_107109.png" alt="GitHub">
-                        </a>
-                    </li>
+        <div class="section col-xs-3 col-xs-offset-1">
+            <h3>Connect with Me</h3>
+            <div class="flex-container">
+                <div class="connect">
+                    <a href="https://github.com/DoctorSlow" target="_blank">
+                        <img id="Github" class="icon img-responsive" src="assets/images/if_github_square_black_107109.png" alt="GitHub">
+                    </a>
+                </div>
 
-                    <li class="connect">
-                        <a href="https://www.linkedin.com/in/jeremyjosephlee/" target="_blank">
-                            <img id="LinkedIn" class="icon img-responsive" src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn">
-                        </a>
-                    </li>
+                <div class="connect">
+                    <a href="https://www.linkedin.com/in/jeremyjosephlee/" target="_blank">
+                        <img id="LinkedIn" class="icon img-responsive" src="assets/images/if_linkedin_square_color_107091.png" alt="LinkedIn">
+                    </a>
+                </div>
 
-                    <li class="connect">
-                        <a a href="https://stackoverflow.com/users/9147050/doctorslow" target="_blank">
-                            <img id="StackOverflow" class="icon img-responsive" src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow">
-                        </a>
-                    </li>
-                </ul>
-            </aside>
+                <div class="connect">
+                    <a a href="https://stackoverflow.com/users/9147050/doctorslow" target="_blank">
+                        <img id="StackOverflow" class="icon img-responsive" src="assets/images/if_stackoverflow_273179.png" alt="StackOverflow">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div class="footer navbar-fixed-bottom">
+        <div class="container-fluid flex-container">
+            <p class="copyright">Copyright ©2018 Jeremy J. Lee</p>
+        </div>
     </div>
 
-    <div class="footer">
-        <footer>Copyright ©2018 Jeremy J. Lee</footer>
-    </div>
 
 </body>
 
